Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
   }
 </script>
 
-<div style="position: relative; height: 300px;">
-  <img src="img.gif" alt="Boa Sorte"
-       style="position: absolute; top: 50px; left: 50%; transform: translateX(-50%);">
+<div style="display: flex; justify-content: center; align-items: flex-start; height: 300px;">
+  <img src="img.gif" alt="Exemplo">
 </div>
 
 <p style="color: white; font-family: 'Courier New', Courier, monospace; margin-top: 100px;">Aprenda palavras formais para aumentar seu vocabulário</p>
