--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   }
 </script>
 
-<div style="display: flex; justify-content: center; align-items: flex-start; height: 300px;">
-  <img src="img.gif" alt="Exemplo">
+<div style="display: flex; justify-content: center; align-items: flex-start; height: 200px;">
+  <img src="img.gif" alt="Boa Sorte">
 </div>
 
 <p style="color: white; font-family: 'Courier New', Courier, monospace; margin-top: 100px;">Aprenda palavras formais para aumentar seu vocabulário</p>
