--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </script>
 
 <div style="display: flex; justify-content: center; align-items: flex-start; height: 200px;">
-  <img src="img.gif" alt="Boa Sorte">
+  <img margin-top: 100px; src="img.gif" alt="Boa Sorte">
 </div>
 
 <p style="color: white; font-family: 'Courier New', Courier, monospace; margin-top: 100px;">Aprenda palavras formais para aumentar seu vocabulário</p>
