--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="card">
     <h2 id="palavra">Clique no botão</h2>
     <p id="significado">para aprender uma nova palavra</p>
-    <button onclick="novaPalavra()">Nova Palavra</button>
+    <button style="box-shadow: 0px 4px 8px rgba(0,0,0,0.3);" onclick="novaPalavra()">Nova Palavra</button>
   </div>
 
   <script>
